tests/golden/syn-monitoring/openshift4-networking/openshift4-networking/20_metrics_namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations: {}
  labels:
    monitoring.syn.tools/monitoring: 'true'
    name: syn-monitoring-openshift4-networking
  name: syn-monitoring-openshift4-networking
