tests/golden/syn-monitoring/openshift4-networking/openshift4-networking/20_metrics_servicemonitors.yaml
apiVersion: monitoring.coreos.com/v1
kind: ServiceMonitor
metadata:
  annotations: {}
  labels:
    name: openshift-multus-multus-admission-controller
  name: openshift-multus-multus-admission-controller
  namespace: syn-monitoring-openshift4-networking
spec:
  endpoints:
    - bearerTokenFile: /var/run/secrets/kubernetes.io/serviceaccount/token
      interval: 30s
      metricRelabelings:
        - action: drop
          regex: (go_.*|process_.*|promhttp_.*)
          sourceLabels:
            - __name__
      port: metrics
      scheme: https
      tlsConfig:
        caFile: /var/run/secrets/kubernetes.io/serviceaccount/service-ca.crt
        serverName: multus-admission-controller.openshift-multus.svc
  jobLabel: app
  namespaceSelector:
    matchNames:
      - openshift-multus
  selector:
    matchLabels:
      app: multus-admission-controller
---
apiVersion: monitoring.coreos.com/v1
kind: ServiceMonitor
metadata:
  annotations: {}
  labels:
    name: openshift-multus-multus-network
  name: openshift-multus-multus-network
  namespace: syn-monitoring-openshift4-networking
spec:
  endpoints:
    - bearerTokenFile: /var/run/secrets/kubernetes.io/serviceaccount/token
      interval: 30s
      metricRelabelings:
        - action: drop
          regex: (go_.*|process_.*|promhttp_.*)
          sourceLabels:
            - __name__
      port: metrics
      scheme: https
      tlsConfig:
        caFile: /var/run/secrets/kubernetes.io/serviceaccount/service-ca.crt
        serverName: network-metrics-service.openshift-multus.svc
  namespaceSelector:
    matchNames:
      - openshift-multus
  selector:
    matchLabels:
      service: netowrk-metrics-service
---
apiVersion: monitoring.coreos.com/v1
kind: ServiceMonitor
metadata:
  annotations: {}
  labels:
    name: openshift-network-diagnostics-network-check-source
  name: openshift-network-diagnostics-network-check-source
  namespace: syn-monitoring-openshift4-networking
spec:
  endpoints:
    - bearerTokenFile: /var/run/secrets/kubernetes.io/serviceaccount/token
      interval: 30s
      metricRelabelings:
        - action: drop
          regex: (go_.*|process_.*|promhttp_.*)
          sourceLabels:
            - __name__
        - action: drop
          regex: (workqueue_.*|apiserver_.*|rest_client_.*|authenticat(ion|ed)_.*)
          sourceLabels:
            - __name__
      port: check-endpoints
      scheme: https
      tlsConfig:
        caFile: /var/run/secrets/kubernetes.io/serviceaccount/service-ca.crt
        insecureSkipVerify: true
        serverName: network-check-source.openshift-network-diagnostics.svc
  jobLabel: component
  namespaceSelector:
    matchNames:
      - openshift-network-diagnostics
  selector:
    matchLabels:
      app: network-check-source
---
apiVersion: monitoring.coreos.com/v1
kind: ServiceMonitor
metadata:
  annotations: {}
  labels:
    name: openshift-sdn-openshift-sdn
  name: openshift-sdn-openshift-sdn
  namespace: syn-monitoring-openshift4-networking
spec:
  endpoints:
    - bearerTokenFile: /var/run/secrets/kubernetes.io/serviceaccount/token
      interval: 30s
      metricRelabelings:
        - action: drop
          regex: (go_.*|process_.*|promhttp_.*)
          sourceLabels:
            - __name__
      port: metrics
      scheme: https
      tlsConfig:
        caFile: /var/run/secrets/kubernetes.io/serviceaccount/service-ca.crt
        serverName: sdn.openshift-sdn.svc
  jobLabel: app
  namespaceSelector:
    matchNames:
      - openshift-sdn
  selector:
    matchLabels:
      app: sdn
---
apiVersion: monitoring.coreos.com/v1
kind: ServiceMonitor
metadata:
  annotations: {}
  labels:
    name: openshift-ovn-kubernetes-ovn-master
  name: openshift-ovn-kubernetes-ovn-master
  namespace: syn-monitoring-openshift4-networking
spec:
  endpoints:
    - bearerTokenFile: /var/run/secrets/kubernetes.io/serviceaccount/token
      interval: 30s
      metricRelabelings:
        - action: drop
          regex: (go_.*|process_.*|promhttp_.*)
          sourceLabels:
            - __name__
      port: metrics
      scheme: https
      tlsConfig:
        caFile: /var/run/secrets/kubernetes.io/serviceaccount/service-ca.crt
        serverName: ovn-kubernetes-master.openshift-ovn-kubernetes.svc
  namespaceSelector:
    matchNames:
      - openshift-ovn-kubernetes
  selector:
    matchLabels:
      app: ovnkube-master
---
apiVersion: monitoring.coreos.com/v1
kind: ServiceMonitor
metadata:
  annotations: {}
  labels:
    name: openshift-ovn-kubernetes-ovn-node
  name: openshift-ovn-kubernetes-ovn-node
  namespace: syn-monitoring-openshift4-networking
spec:
  endpoints:
    - bearerTokenFile: /var/run/secrets/kubernetes.io/serviceaccount/token
      interval: 30s
      metricRelabelings:
        - action: drop
          regex: (go_.*|process_.*|promhttp_.*)
          sourceLabels:
            - __name__
      port: metrics
      scheme: https
      tlsConfig:
        caFile: /var/run/secrets/kubernetes.io/serviceaccount/service-ca.crt
        serverName: ovn-kubernetes-node.openshift-ovn-kubernetes.svc
    - bearerTokenFile: /var/run/secrets/kubernetes.io/serviceaccount/token
      interval: 30s
      metricRelabelings:
        - action: drop
          regex: (go_.*|process_.*|promhttp_.*)
          sourceLabels:
            - __name__
      port: ovn-metrics
      scheme: https
      tlsConfig:
        caFile: /var/run/secrets/kubernetes.io/serviceaccount/service-ca.crt
        serverName: ovn-kubernetes-node.openshift-ovn-kubernetes.svc
  namespaceSelector:
    matchNames:
      - openshift-ovn-kubernetes
  selector:
    matchLabels:
      app: ovnkube-node
